# Reconcli

./: .gitignore  BYPASSCLI_DOCUMENTATION.md  EXTRACTORCLI_DOCUMENTATION.md  HTTPCLI_DOCUMENTATION.md  HTTPCLI_TUTORIAL.md  IP_ENRICHER_DOCUMENTATION.md  PORTCLI_DOCUMENTATION.md  README.md  VHOSTCLI_README.md  XSPEAR_INTEGRATION.md  XSSCLI_UPDATES_README.md  attack_playbook_apt_redteam_1752222837.md  attack_simulation_apt_redteam_1752222837.json  compliance_report_owasp_1752222828.json  compliance_report_owasp_1752222828.md  custom_test.csv  custom_xss_payloads.txt  demo_xss_enhanced.py  example.com.txt  gitlab_example.md  google.com.txt  graphql_endpoints.json  hackerone.com.txt  install_vhostcli_deps.sh  live_swagger.txt  requirements_fofaxcli.txt  resume.cfg  sample_scan.json  setup.py  swagger_endpoints.json  target_specific_wordlist.txt  tesla.com.txt  test_cases.json  test_config.json  vhost_hunting_live_example.py  vhost_training_guide.py  vhost_training_wordlist.txt  xss_html_1752222594.json  xss_html_1752222605.json
reconcli/: .editorconfig  .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES_GUIDE.md  ADVANCED_MAKEWORDLIST_GUIDE.md  AI_GUIDE.md  AI_OPENREDIRECT_FEATURES.md  AI_TEST_RESULTS.md  APICLI_CACHE_GUIDE.md  APICLI_GUIDE.md  BBOT_INTEGRATION_GUIDE.md  BBOT_USAGE_EXAMPLES.md  CACHE_DOCUMENTATION_UPDATE_SUMMARY.md  CACHE_SYSTEM_GUIDE.md  CDNCLI_GUIDE.md  CLOUD_ENHANCEMENT_SUMMARY.md  COMPREHENSIVE_ADVANCED_GUIDE.md  CONTRIBUTING.md  CSVTKCLI_GUIDE.md  DIRBCLI_EXAMPLES.md  DIRBCLI_USAGE.md  DOCTORCLI_GUIDE.md  DOCTORCLI_QUICK_REFERENCE.md  Dockerfile  ENHANCEMENT_SUMMARY.md  EXTRACTORCLI_DOCUMENTATION.md  EXTRACTORCLI_QUICK_REFERENCE.md  FOFACLI_DOCUMENTATION.md  FOFACLI_INTEGRATION_RESULTS.md  FOFAXCLI_CHAIN_DOCUMENTATION.md  FOFA_CLI_EXAMPLES.md  FOFA_CLI_QUICK_START.md  GITCLI_GUIDE.md  GRAPHQLCLI_ENHANCED_GUIDE.md  IPSCLI_DOCUMENTATION.md  JAELES_USAGE.md  JSCLI_ADVANCED_GUIDE.md  LICENSE  LOCAL_SECURITY_README.md  MAKEWORDLISTCLI_GUIDE.md  (+127 more)
reconcli/.github/: SECRETS.md
reconcli/blablacar.com_xss_endpoints.txt/: all_urls_20250805_204326.txt  collection_report_20250805_204326.md  crawl_endpoints_20250805_204326.json  fofa_endpoints_20250805_204326.json  github_endpoints_20250805_204326.json  high_confidence_urls_20250805_204326.txt  unique_endpoints_20250805_204326.json  wordlist_endpoints_20250805_204326.json
reconcli/configs/: example_recon.yaml
reconcli/db/: __init__.py  database.py  models.py  operations.py
reconcli/discovered_endpoints.txt/: all_urls_20250805_201853.txt  collection_report_20250805_201853.md  crawl_endpoints_20250805_201853.json  fofa_endpoints_20250805_201853.json  github_endpoints_20250805_201853.json  high_confidence_urls_20250805_201853.txt  unique_endpoints_20250805_201853.json  wordlist_endpoints_20250805_201853.json
reconcli/enhanced_extractor_fixed/: __init__.py  cli.py  cli_fixed.py  cli_simple.py  config.cfg  enhanced_extractor.py  enhanced_patterns.py  smart_url_handler.py  url_prober_v2.py  url_processor.py
reconcli/example.com_xss_endpoints.txt/: all_urls_20250805_204006.txt  collection_report_20250805_203717.md  collection_report_20250805_204006.md  crawl_endpoints_20250805_203717.json  crawl_endpoints_20250805_204006.json  fofa_endpoints_20250805_203717.json  fofa_endpoints_20250805_204006.json  github_endpoints_20250805_203717.json  github_endpoints_20250805_204006.json  high_confidence_urls_20250805_204006.txt  unique_endpoints_20250805_203717.json  unique_endpoints_20250805_204006.json  wordlist_endpoints_20250805_203717.json  wordlist_endpoints_20250805_204006.json
reconcli/examples/: custom_payloads.txt  openredirect_urls.txt  port_scanning_workflow.sh
reconcli/flows/: README.md  custom_patterns.yaml  subdomain_dns_combined.yaml  url_aggressive.yaml  url_aggressiveV2.yaml  url_debug.yaml  url_deep.yaml  url_katana_advanced.yaml  url_katana_fast.yaml  url_katana_headless.yaml  url_passive.yaml  url_quick.yaml
reconcli/gf_patterns/: api_endpoints.json  debug.json  dynamic_urls.json  idor.json  interesting.json  lfi.json  rce.json  redirect.json  redirect_advanced.json  s3bucket.json  secrets.json  sqli.json  ssrf.json  upload.json  xss.json
reconcli/notes/: copilot_prompts.md
reconcli/output_whois_analysis/: whois_analysis.json  whois_analysis_report.md
reconcli/output_whoisfreaks/: whoisfreaks_results.json  whoisfreaks_results.md  whoisfreaks_results.txt
reconcli/payloads/: XSS_TESTING_GUIDE.md  custom_payloads.txt  custom_sql_payloads.txt  (+6 more)
(+97 files in other folders)
