[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconcli"
version = "3.1.0"
description = "Advanced modular reconnaissance toolkit with SQL injection testing, directory brute-forcing, and comprehensive security assessment capabilities"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jarek Bir", email = "jarek.bir@example.com" }]
maintainers = [{ name = "Jarek Bir", email = "jarek.bir@example.com" }]
keywords = [
   "security",
   "reconnaissance",
   "pentesting",
   "bug-bounty",
   "vulnerability-scanning",
   "sql-injection",
   "directory-brute-force",
   "subdomain-enumeration",
   "web-security",
   "ethical-hacking",
   "cybersecurity",
   "automation",
   "cli-tool",
   "security-testing",
   "ai-powered",
]
classifiers = [
   "Development Status :: 4 - Beta",
   "Environment :: Console",
   "Intended Audience :: Information Technology",
   "Intended Audience :: System Administrators",
   "Topic :: Security",
   "Topic :: System :: Networking",
   "Topic :: System :: Systems Administration",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
   "click>=8.0.0",
   "requests>=2.28.0",
   "pyyaml>=6.0",
   "aiohttp>=3.8.0",
   "asyncio-throttle>=1.0.0",
]

[project.optional-dependencies]
dev = [
   "pytest>=7.0.0",
   "pytest-cov>=4.0.0",
   "pytest-xdist>=3.0.0",
   "pytest-asyncio>=0.20.0",
   "black>=22.0.0",
   "isort>=5.10.0",
   "flake8>=5.0.0",
   "bandit>=1.7.0",
   "safety>=2.0.0",
   "mypy>=1.0.0",
]
ai = ["openai>=1.0.0", "anthropic>=0.8.0"]
docs = ["sphinx>=5.0.0", "sphinx-rtd-theme>=1.0.0", "myst-parser>=0.18.0"]

[project.urls]
Homepage = "https://github.com/jarek-bir/Reconcli"
Documentation = "https://github.com/jarek-bir/Reconcli/wiki"
Repository = "https://github.com/jarek-bir/Reconcli.git"
"Bug Reports" = "https://github.com/jarek-bir/Reconcli/issues"
Changelog = "https://github.com/jarek-bir/Reconcli/releases"

[project.scripts]
reconcli = "reconcli.main:cli"
vulnsqlicli = "reconcli.vulnsqlicli:main"
dirbcli = "reconcli.dirbcli:main"
vhostcli = "reconcli.vhostcli:main"
urlcli = "reconcli.urlcli:main"
dnscli = "reconcli.dnscli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["reconcli*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
reconcli = ["flows/*.yaml", "gf_patterns/*", "wordlists/*.txt", "utils/*.py"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["reconcli"]

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
   "slow: marks tests as slow (deselect with '-m \"not slow\"')",
   "integration: marks tests as integration tests",
   "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["reconcli"]
omit = ["*/tests/*", "*/test_*", "setup.py", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
   "pragma: no cover",
   "def __repr__",
   "if self.debug:",
   "if settings.DEBUG",
   "raise AssertionError",
   "raise NotImplementedError",
   "if 0:",
   "if __name__ == .__main__.:",
]

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["requests.*", "aiohttp.*", "yaml.*"]
ignore_missing_imports = true
